--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -27,11 +27,11 @@ function Hamburger() {
      Home
    </a>
 
-  <a class="divide {% if page.url == "nicenews.live/mission/" %}highlighted{% endif %}" href="{{ "/mission" | relative_url }}">Our Mission</a>
-  <a class="tag divide {% if page.url == "nicenews.live/donate/" %}highlighted{% endif %}" href="{{ "/donate" | relative_url }}">Donate</a>
-  <a class="tag divide {% if page.url == "nicenews.live/submit/" %}highlighted{% endif %}" href="{{ "/submit" | relative_url }}">Submit</a>
-  <a class="tag divide {% if page.url == "nicenews.live/joinus/" %}highlighted{% endif %}" href="{{ "/joinus" | relative_url }}">Join Us</a>
-  <a class="tag divide {% if page.url == "nicenews.live/joinus/" %}highlighted{% endif %}" href="{{ "/faq" | relative_url }}">FAQ</a>
+  <a class="divide {% if page.url == "nicenews.live/mission" %}highlighted{% endif %}" href="{{ "/mission" | relative_url }}">Our Mission</a>
+  <a class="tag divide {% if page.url == "nicenews.live/donate" %}highlighted{% endif %}" href="{{ "/donate" | relative_url }}">Donate</a>
+  <a class="tag divide {% if page.url == "nicenews.live/submit" %}highlighted{% endif %}" href="{{ "/submit" | relative_url }}">Submit</a>
+  <a class="tag divide {% if page.url == "nicenews.live/joinus  " %}highlighted{% endif %}" href="{{ "/joinus" | relative_url }}">Join Us</a>
+  <a class="tag divide {% if page.url == "nicenews.live/faq " %}highlighted{% endif %}" href="{{ "/faq" | relative_url }}">FAQ</a>
   <a class="js-modal-btn  " data-video-id="{{ site.video }}">
     <span id="play-button" class="nav-button inline-icon baseline">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
