--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -41,7 +41,7 @@ title: NFN
           <div class="post-content">
               {{ page.content }}
               <span class="normal">—
-                 <em><a href="/mission">NFN's Oliver Frost contributed to this report.</a></span><p></p></em>
+                 <em><a href="/whoarewe">NFN's Oliver Frost contributed to this report.</a></span><p></p></em>
                  <!--<em>Help spread niceness by sharing this story.</em>-->
                 </div>
 
