--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -27,7 +27,7 @@ function Hamburger() {
      Home
    </a>
 
-  <a class="divide {% if page.url == "/mission.html" %}highlighted{% endif %}" href="{{ "/mission" | relative_url }}">Our Mission</a>
+  <a class="divide {% if page.url == "/whoarewe.html" %}highlighted{% endif %}" href="{{ "/whoarewe" | relative_url }}">Who Are We?</a>
   <a class="tag divide {% if page.url == "/donate.html" %}highlighted{% endif %}" href="{{ "/donate" | relative_url }}">Donate</a>
   <a class="tag divide {% if page.url == "/submit.html" %}highlighted{% endif %}" href="{{ "/submit" | relative_url }}">Submit</a>
   <a class="tag divide {% if page.url == "/joinus.html" %}highlighted{% endif %}" href="{{ "/joinus" | relative_url }}">Join Us</a>
@@ -43,7 +43,7 @@ function Hamburger() {
   <span>NFN</span>
   </a>
 
-  <a class="corner-right" href="{{ "/mission" | relative_url }}">
+  <a class="corner-right" href="{{ "/whoarewe" | relative_url }}">
   Log In
   </a>
   <a href="javascript:void(0);" class="bars-link" onclick="Hamburger()">
