--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -40,7 +40,7 @@ function Hamburger() {
        </g>
       </svg>
     </span>
-  <span>NFN</span>
+  <span class="russian">войти</span>
   </a>
 
   <a class="corner-right" href="{{ "/whoarewe" | relative_url }}">
