--- a/_sass/_modal-video.scss
+++ b/_sass/_modal-video.scss
@@ -103,7 +103,7 @@ $modal-bg-color: #333;
 	position: absolute;
 	z-index: 2;
 	top: -35px;
-	right: -35px;
+	left: 0px;
 	display: inline-block;
 	width: 35px;
 	height: 35px;
