Removed scroll, no autoplay

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -159,7 +159,7 @@ var replace = new ReplaceMe({
 
 </script>
 
-<script type="text/javascript">
+<!-- Auto Play <script type="text/javascript">
 
 window.onload = function () {
     if (localStorage.getItem("hasCodeRunBefore") === null) {
@@ -168,7 +168,7 @@ window.onload = function () {
     }
 }
 
-</script>
+</script> -->
 
 <!-- Time -->
 
