--- a/_includes/categories.html
+++ b/_includes/categories.html
@@ -1,7 +1,7 @@
 
 <ul class="col-xs-12 category-list inline-list float-left">
 
-  <li style="padding-left:0em;"><a href="{{ "/whoarewe" | relative_url }}" >Our Mission</a></li>
+  <li style="padding-left:0em;"><a href="{{ "/whoarewe" | relative_url }}" >Who Are We?</a></li>
   <li><a class="category" href="{{ "beingwell" | relative_url }}">Being Well</a></li>
   <li><a class="category" href="{{ "breakthroughs" | relative_url }}">Breakthroughs</a></li>
   <li><a class="category" href="{{ "inspiring" | relative_url }}">Inspiring</a></li>
