--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -47,7 +47,7 @@
 
                 <div class="col-xs-12">
                   <!--<span class="topic">{{ post.tags }}</span>-->
-                  <a href="{{ post.url | relative_url }}" class="post-image" style="background-image: url('/thumbnail{{ post.image | relative_url }}');"></a>
+                  <a href="{{ post.url | relative_url }}" class="post-image" style="background-image: url('/thumbnail{{ post.image }}');"></a>
                   <a href="{{ post.url | relative_url }}"><h4 class="project-title">
                   {{ post.title }}
                   </h4></a>
