--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -16,7 +16,7 @@ function Hamburger() {
 
 <ul class="topnav" id="myTopnav">
 
-    <a id="title-link" href="/">
+    <a id="title-link" href="{{ site.baseurl }}">
 
     <img src="{{ "/img/logo.png " | relative_url }}" class="animated slideInDown" >
 
