--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -144,7 +144,7 @@
 </script>
 
 <!-- Scripts Initialise -->
-<script src="/js/modal-video.min.js"></script>
+<script src="/nfn/js/modal-video.min.js"></script>
 
 <script>
 
