--- a/_includes/share-this.html
+++ b/_includes/share-this.html
@@ -6,7 +6,7 @@
 </span>
 </div>
 
-<script src="/js/countUp.js"></script>
+<script src="/nfn/js/countUp.js"></script>
 <script type="text/javascript">
 
 var shareCounters = document.getElementsByClassName('sharecount');
