--- a/_includes/actions.html
+++ b/_includes/actions.html
@@ -32,7 +32,7 @@ function Hamburger() {
   <a class="tag divide {% if page.url == "/submit.html" %}highlighted{% endif %}" href="{{ "/submit" | relative_url }}">Submit</a>
   <a class="tag divide {% if page.url == "/joinus.html" %}highlighted{% endif %}" href="{{ "/joinus" | relative_url }}">Join Us</a>
   <a class="tag divide {% if page.url == "/faq.html" %}highlighted{% endif %}" href="{{ "/faq" | relative_url }}">FAQ</a>
-  <a class="js-modal-btn  " data-video-id="{{ site.video }}">
+<!--  <a class="js-modal-btn  " data-video-id="{{ site.video }}">
     <span id="play-button" class="nav-button inline-icon baseline">
       <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 510 510" style="enable-background:new 0 0 510 510;" xml:space="preserve">
        <g id="play-circle-outline">
@@ -42,7 +42,7 @@ function Hamburger() {
     </span>
   <span class="russian">войти</span>
   </a>
-
+-->
   <a class="corner-right" href="{{ "/whoarewe" | relative_url }}">
   Log In
   </a>
