--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,14 +17,14 @@
   {% endif %}
 
   <!-- Global site tag - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108614926-1"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-74QGH7BK80"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', '{{ site.analytics_id }}');
+  gtag('config', 'G-74QGH7BK80');
 </script>
-
 
 </head>
