--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -144,9 +144,7 @@
 </script>
 
 <!-- Scripts Initialise -->
-
-<!--
-<script src="/nfn/js/modal-video.min.js"></script>
+<!--<script src="/nfn/js/modal-video.min.js"></script>-->
 
 <script>
 
@@ -160,8 +158,6 @@ var replace = new ReplaceMe({
 
 
 </script>
-
--->
 
 <!-- Time -->
 
